clusters/home/apps/recipes/recipes/configs/recipes-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: recipes-ingressroute
  namespace: recipes
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-clusterissuer
    gethomepage.dev/href: "https://recipes.homelab.rivetcode.com"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Recipes
    gethomepage.dev/group: Productivity
    gethomepage.dev/icon: mdi-chef-hat
    gethomepage.dev/app: recipes # optional, may be needed if app.kubernetes.io/name != ingress metadata.name
    gethomepage.dev/name: Recipes
    #gethomepage.dev/widget.type: "recipes"
    #gethomepage.dev/widget.url: "https://recipes.homelab.rivetcode.com"
    gethomepage.dev/pod-selector: ""
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`recipes.homelab.rivetcode.com`)
    kind: Rule
    services:
    - name: my-recipes-cooklang
      port: 9080
  tls:
    secretName: recipes-certificate-secret
